Comments from Rob and Dmitrii

--- a/docs/MPM_errors_manuscript/.gitignore
+++ b/docs/MPM_errors_manuscript/.gitignore
@@ -4,3 +4,5 @@ MPM_errors_manuscript.ttt
 !MPM_errors_manuscript_MF_comments.pdf
 !Appendix_2_18-06-20.pdf
 !MPM_errors_manuscript_18-06-20.pdf
+!MPM_errors_manuscript_18-06-21 edits RSG.pdf
+!MPM_errors_manuscript_18-06-21+LGF.pdf
