--- a/docs/MPM_errors_manuscript/.gitignore
+++ b/docs/MPM_errors_manuscript/.gitignore
@@ -6,3 +6,4 @@ MPM_errors_manuscript.ttt
 !MPM_errors_manuscript_18-06-20.pdf
 !MPM_errors_manuscript_18-06-21 edits RSG.pdf
 !MPM_errors_manuscript_18-06-21+LGF.pdf
+!MPM_errors_manuscript_with comments.pdf
