Address Masami's comments

--- a/docs/MPM_errors_manuscript/.gitignore
+++ b/docs/MPM_errors_manuscript/.gitignore
@@ -7,3 +7,4 @@ MPM_errors_manuscript.ttt
 !MPM_errors_manuscript_18-06-21 edits RSG.pdf
 !MPM_errors_manuscript_18-06-21+LGF.pdf
 !MPM_errors_manuscript_with comments.pdf
+!MPM_errors_manuscript_V2_MF.pdf
