--- a/docs/MPM_errors_manuscript/.gitignore
+++ b/docs/MPM_errors_manuscript/.gitignore
@@ -1,6 +1,6 @@
 *.tex
-MPM_errors_manuscript.spl
-MPM_errors_manuscript.ttt
+*.spl
+*.ttt
 !MPM_errors_manuscript_MF_comments.pdf
 !Appendix_2_18-06-20.pdf
 !MPM_errors_manuscript_18-06-20.pdf
