--- a/docs/MPM_errors_manuscript/.gitignore
+++ b/docs/MPM_errors_manuscript/.gitignore
@@ -8,4 +8,5 @@
 !MPM_errors_manuscript_18-06-21+LGF.pdf
 !MPM_errors_manuscript_with comments.pdf
 !MPM_errors_manuscript_V2_MF.pdf
+!Cover letter submission.pdf
 *_cache
