Get files out of the way to fix stupid merge error

--- a/docs/MPM_errors_manuscript/.gitignore
+++ b/docs/MPM_errors_manuscript/.gitignore
@@ -10,6 +10,6 @@
 !MPM_errors_manuscript_V2_MF.pdf
 !Cover letter submission.pdf
 !MPM_errors_manuscript_submitted 2018-09-07.pdf
-!Appendix_A.pdf
+!Appendix_A*.pdf
 !Appendix_B.pdf
 *_cache
